--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Shao Chien, Lu <s1111534@mail.yzu.edu.tw>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
+argparse = "^1.4"
 pytest = "^6.0"
 
 [project]
